[package]
name = "galois_field"
version = "0.1.8"
edition = "2021"
authors = ["eightt"]
repository = "https://github.com/eightfx/finite_field"
license = "MIT"
description = "Library for convenient operations on finite field, polynomials, and matrices over finite field."
readme = "README.md"
categories = ["algorithms", "mathematics"]
keyword = ["finite", "field", "polynomial", "operation", "galois", "remainder","sweep method", "Gaussian elimination","matrix"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
